2008-04-30  Rémi Zara  <remi_zara@mac.com>

Reviewed by Dave Hyatt.

        fix https://bugs.webkit.org/show_bug.cgi?id=18618
        REGRESSION (r31823-r31847): Patterns are upside down

        * svg/graphics/cg/SVGPaintServerPatternCg.cpp:
        (WebCore::patternCallback): flip the y axis when drawing the tile



Canonical link: https://commits.webkit.org/26001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32734 268f45cc-cd09-0410-ab3c-d52691b4dbfc